samples/_failures_safe/1761317467_ce64cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d06a251.c: In function ‘main’:
./samples/SAFE/__tmp_6d06a251.c:142:31: error: expected ‘;’ at end of input
  142 |         print_matrix_recursive
      |                               ^
      |                               ;
./samples/SAFE/__tmp_6d06a251.c:142:9: error: expected declaration or statement at end of input
  142 |         print_matrix_recursive
      |         ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6d06a251.c:142:9: error: expected declaration or statement at end of input
